[gd_scene load_steps=2 format=2]

[ext_resource path="res://license_dialog.gd" type="Script" id=1]

[node name="LicenseDialog" type="WindowDialog"]
margin_right = 640.0
margin_bottom = 460.0
rect_min_size = Vector2( 350, 160 )
window_title = "Licensing Information"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
label_text = "Clicking one of the buttons below will display licensing information for individual components of  and the engine it is built on, the Godot Engine."

[node name="Label" type="Label" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.1
text = "Clicking one of the buttons below will display licensing information for individual components of Godot Unofficial License Dialog (GUiLD) and the engine it is built on, the Godot Engine."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComponentList" type="Tree" parent="."]
anchor_left = 0.01
anchor_top = 0.11
anchor_right = 0.99
anchor_bottom = 0.99
allow_reselect = true
hide_root = true
drop_mode_flags = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributionDialog" type="AcceptDialog" parent="."]
margin_right = 600.0
margin_bottom = 400.0
window_title = "This window title will be replaced with the title of an attribution notice."
resizable = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="TextEdit" parent="AttributionDialog"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.9
margin_left = 2.0
margin_top = 4.0
margin_right = -2.0
margin_bottom = 4.0
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
text = "This text will be replaced with the text of an attribution notice when the window pops up."
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ComponentList" to="." method="_on_ComponentList_item_selected"]
